--- a/dev/env/manifests/openshift-router/01-router_rbac.yaml
+++ b/dev/env/manifests/openshift-router/01-router_rbac.yaml
@@ -1,3 +1,4 @@
+# Downloaded from https://raw.githubusercontent.com/openshift/router/master/deploy/router_rbac.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
