--- a/dev/env/manifests/openshift-router/02-route.crd.yaml
+++ b/dev/env/manifests/openshift-router/02-route.crd.yaml
@@ -1,3 +1,4 @@
+# Downloaded from https://raw.githubusercontent.com/openshift/api/master/route/v1/route.crd.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
