Use URLs instead of hosts in public API (#353)

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ config/dataplane-cluster-configuration.yaml
 # integration test's results
 /data/results/*
 !/data/results/.keep
+e2e/e2e.test
 
 # Docker template
 Dockerfile_integration_tests
