allow squid to run as non-root

--- a/fleetshard/pkg/central/charts/data/tenant-resources/config/squid.conf
+++ b/fleetshard/pkg/central/charts/data/tenant-resources/config/squid.conf
@@ -52,7 +52,8 @@ http_port 3128
 
 # Disable caching and most logging
 cache deny all
+cache_log /dev/null
 access_log none all
 debug_options ALL,0
-
+pid_filename none
 shutdown_lifetime 0
