Avoid RHSSO in Central auth config for clarity.

--- a/templates/secrets-template.yml
+++ b/templates/secrets-template.yml
@@ -29,6 +29,9 @@ parameters:
   description: Password for the database user.
   value: TheBlurstOfTimes
 
+- name: CENTRAL_IDP_CLIENT_SECRET
+  description: Client secret to pass to Central's auth config to set up its IdP integration.
+
 - name: OCM_SERVICE_CLIENT_ID
   description: Client id used to interact with other UHC services
 
@@ -114,6 +117,7 @@ objects:
   metadata:
     name: fleet-manager
   stringData:
+    central.idp-client-secret: "${CENTRAL_IDP_CLIENT_SECRET}"
     ocm-service.clientId: ${OCM_SERVICE_CLIENT_ID}
     ocm-service.clientSecret: ${OCM_SERVICE_CLIENT_SECRET}
     ocm-service.token: ${OCM_SERVICE_TOKEN}
