ROX-12155: Propagate Central's RH SSO config to fleet manager (#370)

--- a/dev/env/manifests/fleet-manager/01-fleet-manager-secrets.yaml
+++ b/dev/env/manifests/fleet-manager/01-fleet-manager-secrets.yaml
@@ -4,6 +4,7 @@ metadata:
   name: fleet-manager
   namespace: "$ACSMS_NAMESPACE"
 stringData:
+  central.idp-client-secret: "${CENTRAL_IDP_CLIENT_SECRET}"
   db.host: "${DATABASE_HOST}"
   db.name: "${DATABASE_NAME}"
   db.port: "${DATABASE_PORT}"
