rename to better align with parameter name

--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -19,7 +19,7 @@ parameters:
   description: Which ACS Service Fleet Manager environment to use for this deployment
   value: production
 
-- name: CENTRAL_RHSSO_CLIENT_ID
+- name: CENTRAL_IDP_CLIENT_ID
   displayName: Central Red Hat SSO client id
   description: Which OIDC client id to use to connect to Red Hat SSO from Central
 
@@ -1068,7 +1068,7 @@ objects:
             - --aws-route53-access-key-file=/secrets/fleet-manager-credentials/aws.route53accesskey
             - --aws-route53-secret-access-key-file=/secrets/fleet-manager-credentials/aws.route53secretaccesskey
             - --central-idp-client-secret-file=/secrets/fleet-manager-credentials/central.idp-client-secret
-            - --central-idp-client-id=${CENTRAL_RHSSO_CLIENT_ID}
+            - --central-idp-client-id=${CENTRAL_IDP_CLIENT_ID}
             - --observatorium-debug=${ENABLE_OBSERVATORIUM_DEBUG}
             - --observatorium-ignore-ssl=${OBSERVATORIUM_INSECURE}
             - --observatorium-timeout=${OBSERVATORIUM_TIMEOUT}
