--- a/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
+++ b/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
@@ -35,6 +35,9 @@ spec:
       containers:
       - name: egress-proxy
         image: {{ .Values.egressProxy.image }}
+        command:
+        - "squid"
+        - "-N"
         ports:
         - containerPort: 3128
           protocol: TCP
