explicit config file

--- a/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
+++ b/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
@@ -38,6 +38,8 @@ spec:
         command:
         - "squid"
         - "-N"
+        - "-f"
+        - "/etc/squid/squid.conf"
         ports:
         - containerPort: 3128
           protocol: TCP
