ROX-12571: Use explicit egress proxy command to override entrypoint (#395)

--- a/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
+++ b/fleetshard/pkg/central/charts/data/tenant-resources/templates/egress-proxy.yaml
@@ -35,6 +35,11 @@ spec:
       containers:
       - name: egress-proxy
         image: {{ .Values.egressProxy.image }}
+        command:
+        - "squid"
+        - "-N"
+        - "-f"
+        - "/etc/squid/squid.conf"
         ports:
         - containerPort: 3128
           protocol: TCP
