--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -980,6 +980,7 @@ objects:
             command:
             - /usr/local/bin/fleet-manager
             - migrate
+            - rollback-all
             - --db-host-file=/secrets/rds/db.host
             - --db-port-file=/secrets/rds/db.port
             - --db-user-file=/secrets/rds/db.user
