Inject LOGENCODING in test env

--- a/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
+++ b/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
@@ -81,6 +81,9 @@ spec:
               name: secrets
             - mountPath: /config
               name: config
+          env:
+            - name: LOGENCODING
+              value: "$LOGENCODING"
       restartPolicy: Always
       volumes:
         - name: secrets
