--- a/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
+++ b/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
@@ -47,7 +47,8 @@ spec:
                   optional: false
             - name: RUNTIME_POLL_PERIOD
               value: 10s
-
+            - name: LOGENCODING
+              value: "$LOGENCODING"
           image: "${FLEET_MANAGER_IMAGE}"
           imagePullPolicy: IfNotPresent
           name: fleetshard-sync
