--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -64,3 +64,5 @@ export RHACS_OPERATOR_RESOURCES_DEFAULTS='{"requests":{"cpu":"200m","memory":"30
 
 export ENABLE_EXTERNAL_CONFIG_DEFAULT=false
 export USE_AWS_VAULT_DEFAULT=false
+
+export LOGENCODING_DEFAULT="console"
