Inject LOGLEVEL in test env

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -66,3 +66,4 @@ export ENABLE_EXTERNAL_CONFIG_DEFAULT=false
 export USE_AWS_VAULT_DEFAULT=false
 
 export LOGENCODING_DEFAULT="console"
+export LOGLEVEL_DEFAULT="info"
