--- a/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
+++ b/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
@@ -84,6 +84,8 @@ spec:
           env:
             - name: LOGENCODING
               value: "$LOGENCODING"
+            - name: LOGLEVEL
+              value: "$LOGLEVEL"
       restartPolicy: Always
       volumes:
         - name: secrets
