--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -19,3 +19,7 @@ jobs:
         with:
           go-version: "1.17"
       - uses: pre-commit/action@v3.0.0
+      - uses: pre-commit/action@v3.0.0
+        name: Verify generated files are up-to-date
+        with:
+          extra_args: --hook-stage=manual --all-files
