Add git commit sha and tag to fleetshard-sync deployment (#406)

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: fleetshard-sync
     managed-service.rhacs.redhat.com/update-trigger: {{ now }}
+    managed-service.rhacs.redhat.com/git-commit-sha: {{ .Values.fleetshardSync.gitCommitSHA }}
+    managed-service.rhacs.redhat.com/git-describe-tag: {{ .Values.fleetshardSync.gitDescribeTag }}
 spec:
   replicas: 1
   selector:
