--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -36,7 +36,9 @@ acsOperator:
   enabled: false
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: rhacs-operator.v3.70.0
+  version: v3.70.0
+  # This setting specifies whether to use a upstream operator to test unreleased versions of ACS.
+  upstream: false
 
 # See available parameters in charts/observability/values.yaml
 # - enabled flag is used to completely enable/disable observability sub-chart
