Implement force-deletion of Central requests on the DB layer

--- a/openapi/fleet-manager-private-admin.yaml
+++ b/openapi/fleet-manager-private-admin.yaml
@@ -259,6 +259,41 @@ paths:
             application/json:
               schema:
                 $ref: 'fleet-manager.yaml#/components/schemas/Error'
+  '/api/rhacs/v1/admin/db/centrals/{id}':
+    delete:
+      summary: Delete a Central directly in the Database by ID
+      parameters:
+        - $ref: "fleet-manager.yaml#/components/parameters/id"
+      security:
+        - Bearer: [ ]
+      operationId: deleteDbCentralById
+      responses:
+        "200":
+          description: Central deleted by ID
+        "401":
+          description: Auth token is invalid
+          content:
+            application/json:
+              schema:
+                $ref: 'fleet-manager.yaml#/components/schemas/Error'
+        "403":
+          description: User is not authorised to access the service
+          content:
+            application/json:
+              schema:
+                $ref: 'fleet-manager.yaml#/components/schemas/Error'
+        "404":
+          description: No Central found with the specified ID
+          content:
+            application/json:
+              schema:
+                $ref: 'fleet-manager.yaml#/components/schemas/Error'
+        "500":
+          description: Unexpected error occurred
+          content:
+            application/json:
+              schema:
+                $ref: 'fleet-manager.yaml#/components/schemas/Error'
 
 components:
   schemas:
