--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -24,11 +24,8 @@ fleetshardSync:
   redHatSSO:
     clientId: ""
     clientSecret: ""
-  # Will be created when the auth type RHSSO is used. It will handle obtaining access tokens and storing those within a
-  # shared volume of token-refresher and fleetshard-sync.
-  tokenRefresher:
-    image: "quay.io/rhoas/mk-token-refresher:latest"
-    issuerUrl: "https://sso.redhat.com/auth/realms/redhat-external"
+    endpoint: "https://sso.redhat.com"
+    realm: "redhat-external"
   egressProxy:
     image: "registry.redhat.io/openshift4/ose-egress-http-proxy:v4.11.0"
 
