--- a/dashboards/grafana-dashboard-acs-fleet-manager.configmap.yaml
+++ b/dashboards/grafana-dashboard-acs-fleet-manager.configmap.yaml
@@ -36,7 +36,7 @@ data:
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
       "id": 413,
-      "iteration": 1662669303081,
+      "iteration": 1664183383763,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -616,9 +616,9 @@ data:
         "list": [
           {
             "current": {
-              "selected": false,
-              "text": "app-sre-stage-01-prometheus",
-              "value": "app-sre-stage-01-prometheus"
+              "selected": true,
+              "text": "app-sre-prod-04-prometheus",
+              "value": "app-sre-prod-04-prometheus"
             },
             "hide": 0,
             "includeAll": false,
@@ -627,16 +627,17 @@ data:
             "name": "datasource",
             "options": [],
             "query": "prometheus",
+            "queryValue": "",
             "refresh": 1,
-            "regex": "app-sre-stage-01-prometheus|app-sre-prod-01-prometheus",
+            "regex": "app-sre-stage-01-prometheus|app-sre-prod-04-prometheus",
             "skipUrlSync": false,
             "type": "datasource"
           },
           {
             "current": {
-              "selected": false,
-              "text": "acs-fleet-manager-stage",
-              "value": "acs-fleet-manager-stage"
+              "selected": true,
+              "text": "acs-fleet-manager-production",
+              "value": "acs-fleet-manager-production"
             },
             "hide": 0,
             "includeAll": false,
@@ -645,12 +646,18 @@ data:
             "name": "namespace",
             "options": [
               {
-                "selected": true,
+                "selected": false,
                 "text": "acs-fleet-manager-stage",
                 "value": "acs-fleet-manager-stage"
+              },
+              {
+                "selected": true,
+                "text": "acs-fleet-manager-production",
+                "value": "acs-fleet-manager-production"
               }
             ],
-            "query": "acs-fleet-manager-stage",
+            "query": "acs-fleet-manager-stage,acs-fleet-manager-production",
+            "queryValue": "",
             "skipUrlSync": false,
             "type": "custom"
           }
@@ -664,6 +671,6 @@ data:
       "timezone": "",
       "title": "ACS Fleet Manager",
       "uid": "D1C839d82",
-      "version": 3,
+      "version": 4,
       "weekStart": ""
     }
